--- a/recipes/asian_lettuce_wraps.html
+++ b/recipes/asian_lettuce_wraps.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Asian Lettuce Wraps</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/asian_lettuce_wraps.html">Asian Lettuce Wraps</a>
+    <h1>Asian Lettuce Wraps</h1>
 </body>
 </html>
