--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/asian_lettuce_wraps.html">Asian Lettuce Wraps</a>
+    <ul>
+        <li>
+            <a href="recipes/asian_lettuce_wraps.html">Asian Lettuce Wraps</a>
+        </li>
+        <li>
+            <a href="recipes/asian_lettuce_wraps_2.html">Asian Lettuce Wraps 2</a>
+        </li>
+        <li>
+            <a href="recipes/asian_lettuce_wraps_3.html">Asian Lettuce Wraps 3</a>
+        </li>
+    </ul>
 </body>
 </html>
